<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pathological</string>
    <string name="author_attrib">By John-Paul Gignac</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="next_level">Next Level</string>
    <string name="pause">Pause</string>
    <string name="menu">Menu</string>
    <string name="mute_music">Mute Music</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="how_to_play">How to Play</string>
    <string name="close">Close</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="level_cleared">Level Cleared!</string>
    <string name="score">Score:</string>
    <string name="empty_hole_bonus">Bonus for %d%% empty holes:</string>
    <string name="time_remaining_bonus">Bonus for %d%% time remaining:</string>
    <string name="total">Total:</string>
    <string name="new_best">New Best!</string>
    <string name="prev_best">Previous Best:</string>
    <string name="best">Best:</string>
    <string name="star">Star</string>
    <string name="about_dialog">Version %s\n
        \nCopyright &#169; 2016  John-Paul Gignac\n
        \nThis program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n
        \nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n
        \nThe source code for this program is available at
        https://github.com/jjgignac/pathological-android\n
        \nThanks to the following people for their helpful support, criticisms,
        comments, contributions, etc.:\n
        \n
            Carrie Bloomfield\n
            Mike Brenneman\n
            T. Francis Chen\n
            Kim Gignac\n
            Matthias Le Bidan\n
            Steve Mills\n
            James Porto\n
            Paul Preney\n
            Paul Prescod\n
            Alesh Slovak\n
            Peter Tkacz\n
            Dale Wick\n
        \nOriginal Soundtrack by Matthias Le Bidan.
        The Pathological logo was designed by Carrie Bloomfield.
        Board designs were contributed by Mike Brenneman and Kim Gignac.
        Intro screen map layout by Alex Gignac.
        In-game graphics partially based on artwork by Mike Brenneman.
    </string>
    <string name="share_text">Check out this great game! %s</string>
    <string name="got_it">Got it!</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_message">If you like this game, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_it_now">Rate it now</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="turn_wheel_instructions">Turn the wheel to let marbles in.  Four matching marbles will clear the wheel.</string>
    <string name="eject_instructions">Swipe to release a marble. And make sure the other wheel is ready to receive it!</string>
    <string name="completion_instructions">Great job! You completed a wheel! Now complete the other wheel to finish the level.</string>

</resources>
